8343452: Incorrect WINDOWS build variable is used in macroAssembler_x86.cpp

Reviewed-by: kvn, chagedorn, jwaters